fix (ui): fix theme and language dropdown slightly overlap breadcrumbs bar

--- a/components/language-switcher/element.css
+++ b/components/language-switcher/element.css
@@ -53,7 +53,7 @@
   width: max-content;
 
   padding: 0.75rem;
-  margin: 0;
+  margin: 0.29rem 0 0;
 
   background-color: var(--color-background-primary);
   border: 1px solid var(--color-border-primary);
